Fixed - Checkbox align issue on login form

--- a/assets/css/user-registration.scss
+++ b/assets/css/user-registration.scss
@@ -114,6 +114,10 @@
 		padding: 10px;
 		box-shadow: none;
 		background: none;
+		input[name="rememberme"]#rememberme{
+
+			vertical-align:middle;
+		}
 	}
 
 	* {
